samples/_failures_safe/1761251382_c17d9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50b6950f.c:181: error: expected ‘;’, ‘,’ or ‘)’ at end of input
